bpo-43933: Show frame.f_lineno as None, rather than -1, if there is no line number. (GH-25717)